<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/salarioEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/salarioEditView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        style="@style/EditTextFieldTop"
        />

    <TextView
        android:id="@+id/salarioTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/salarioTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/salarioEditText"
        style="@style/TextViewFieldInfo"
        />

    <EditText
        android:id="@+id/gastosEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/gastosEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/salarioTextView"
        style="@style/EditTextFieldMiddle"
        />

    <TextView
        android:id="@+id/gastosTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gastosTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/gastosEditText"
        style="@style/TextViewFieldInfo"
        />

    <EditText
        android:id="@+id/dependentesEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/dependentesEditText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/gastosTextView"
        style="@style/EditTextFieldMiddle"
        />

    <TextView
        android:id="@+id/dependentesTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dependentesTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dependentesEditText"
        style="@style/TextViewFieldInfo"
        />

    <TextView
        android:id="@+id/impostoTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impostoTextView"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/dependentesTextView"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/impostoValueTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/impostoValueTextView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/impostoTextView"
        style="@style/ImpostoTextView"
        />

    <Button
        android:id="@+id/calcularButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/calcularButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/impostoValueTextView"
        style="@style/Button"
        />

</androidx.constraintlayout.widget.ConstraintLayout>